# robot_controller

./: .gitignore  README.md  pyproject.toml
qml/: main.qml
qml/components/molecules/: OffsetPopup.qml  PoseInput.qml  PositionItem.qml  PositionPopup.qml
qml/components/organisms/: ListPosition.qml
qml/core/: qmldir
qml/screens/position/: qmldir
qml/screens/position/components/: ListPosition.qml  PositionItem.qml  PositionPopup.qml
qml/screens/position/page/: PositionsPage.qml
sql/joints/: delete_all.sql  delete_pose.sql  insert_pose.sql  select_all.sql  update_offset.sql  update_pose.sql
sql/migrations/: 001_create_pose_table.sql  002_add_config_column.sql  004_rename_table.sql  005_add_offsets.sql
sql/poses/: delete_all.sql  delete_pose.sql  insert_pose.sql  select_all.sql  update_offset.sql  update_pose.sql
src/: main.py
src/controllers/: position_controller.py
src/db/: db_manager.py  poses.db
src/model/: positionJ_model.py  position_model.py
src/repository/: positionJ_repository.py  position_repository.py
src/services/: robot_service.py
