[project]
name = "robotine-ui"
version = "0.1.0"
description = "Interface gráfica QtQuick/QML para controle do robô Fairino"
requires-python = ">=3.10,<3.12"

dependencies = [
    "PySide6==6.7.2",
    "PySide6-Essentials==6.7.2",
    "PySide6-Addons==6.7.2",
    "python-dotenv",
    "sqlite-utils",
    "requests",
    "numpy",
    "cython",
    "setuptools>=61.0",
    "wheel"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src", "libs"]
namespaces = true

[tool.pyside6-project]
files = [
    "main.py",
    "qml/App.qml",
    "qml/controllers/",
    "qml/components/",
    "qml/pages/",
    "controllers/",
    "model/",
    "services/",
    "utils/",
    "libs/fairino/"
]
